2006/1/27 -- released version 20060127_trunk

2006/1/26 -- released version 20060126_trunk

2006/1/25 -- released version 20060125_trunk

2006/1/24 -- released version 20060124_trunk

2006/1/23 -- released version 20060123_trunk

2006/1/22 -- released version 20060122_trunk

2006/1/21 -- released version 20060121_trunk

2006/1/20 -- released version 20060120_trunk

2006/1/19 -- released version 20060119_trunk

2006/1/18 -- released version 20060118_trunk

2006/1/17 -- released version 20060117_trunk

2006/1/16 -- released version 20060116_trunk

2006/1/15 -- released version 20060115_trunk

2006/1/14 -- released version 20060114_trunk

2006/1/13 -- released version 20060113_trunk

2006/1/12 -- released version 20060112_trunk

2006/1/11 -- released version 20060111_trunk

2006/1/10 -- released version 20060110_trunk

2006/1/9 -- released version 20060109_trunk

2006/1/8 -- released version 20060108_trunk

2006/1/7 -- released version 20060107_trunk

2006/1/6 -- released version 20060106_trunk

* make buggy_perl_version test work on perl 5.8.7 too ... 
  --tobi from Nathan Butcher <xqufa .yokohama.riken.jp>

2006/1/5 -- released version 20060105_trunk

2006/1/4 -- released version 20060104_trunk

2006/1/3 -- released version 20060103_trunk

2006/1/2 -- released version 20060102_trunk

2006/1/1 -- released version 20060101_trunk

2005/12/31 -- released version 20051231_trunk

2005/12/30 -- released version 20051230_trunk

2005/12/29 -- released version 20051229_trunk

2005/12/28 -- released version 20051228_trunk

2005/12/27 -- released version 20051227_trunk

2005/12/26 -- released version 20051226_trunk

2005/12/25 -- released version 20051225_trunk

2005/12/24 -- released version 20051224_trunk

2005/12/23 -- released version 20051223_trunk

2005/12/22 -- released version 20051222_trunk

2005/12/21 -- released version 20051221_trunk

* Set an --end time for graphs so that fetch does get its its
  undies in a twist when selecting the RRA and goes for hires